k8s/petclinic.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic
spec:
  type: NodePort
  selector:
    app: petclinic
  ports:
    - port: 80
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
  labels:
    app: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
        - name: workload
          image: ashwiniethiraj/petclinic:latest

          ports:
            - name: http
              containerPort: 8080

          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
