k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: staging
spec:
  type: ClusterIP
  selector:
    app: petclinic
  ports:
    - port: 80
      targetPort: 8080
